--- a/pms.domain/pms.domain.csproj
+++ b/pms.domain/pms.domain.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="LoginViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TenantType.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
